mise a jour du site

--- a/Exam1/Style.css
+++ b/Exam1/Style.css
@@ -10,6 +10,11 @@ html {
     background-color: #212529;
 }
 
+#Link, #Link:visited {
+    text-decoration: none;
+    color: black;
+}
+
 
 
 #btnConnexion {
