--- a/Exam1/Style.css
+++ b/Exam1/Style.css
@@ -32,6 +32,10 @@ html {
     margin-top: 75px;
 }
 
+.Background-Event {
+    background-color: white;
+}
+
 
 #btnConnexion {
     border-radius: 4px;
