--- a/Exam1/Style.css
+++ b/Exam1/Style.css
@@ -29,8 +29,13 @@ html {
 }
 
 .test1 {
-    margin-top: 75px;
+    margin-top: 150px;
 }
+
+.test2 {
+    margin-top: 150px;
+}
+
 
 .Background-Event {
     background-color: white;
