--- a/Exam1/styleStat.css
+++ b/Exam1/styleStat.css
@@ -1,33 +1,32 @@
+.pie-chart {
+    width: 300px;
+    height: 300px;
+    border-radius: 50%;
+    margin: 20px;
+    display: inline-block;
+}
 
 .bar {
-    width: 100%;
-    height: 30px;
-    margin: 20px 0;
-    background: #e0e0e0;
-    position: relative;
-    border-radius: 5px;
-    overflow: hidden;
+    display: flex;
+    align-items: center;
+    margin-bottom: 10px;
 }
 
-.bar:hover {
-    background: #d0d0d0;
-}
-
-.bar .inner-bar {
-    position: absolute;
-    top: 0;
-    left: 0;
-    height: 100%;
+.inner-bar {
+    height: 20px;
     border-radius: 5px;
 }
 
 .bar-text {
-    position: absolute;
-    top: 50%;
-    transform: translateY(-50%);
-    left: 10px;
-    z-index: 5;
+    margin-left: 10px;
 }
-.container.text-center {
-    margin-top: 80px;
+
+.btn-index {
+    margin-top: 20px;
+}
+.navText {
+    color: #ccc;
+    font-weight: bold;
+    font-size: 1.1em;
+    padding: 10px 15px;
 }
