--- a/Exam1/StyleModification.css
+++ b/Exam1/StyleModification.css
@@ -23,11 +23,36 @@ html {
 }
 
 .test1 {
-    margin-top: 150px;
+    margin-top: 130px;
+}
+
+.btn-modif {
+    margin-left: 10px;
+    margin-right: 10px;
 }
 
 .h-30 {
     height: 30%;
+}
+
+.h-50 {
+    height: 50%;
+}
+
+.h-5 {
+    height: 5%;
+}
+
+.h-90 {
+    height: 90%;
+}
+
+.pie-chart {
+    width: 300px;
+    height: 300px;
+    border-radius: 50%;
+    margin: 20px;
+    display: inline-block;
 }
 
 .btn-index {
@@ -63,6 +88,10 @@ html {
 
 .h-80 {
     height: 80%;
+}
+
+.h-10 {
+    height: 10%;
 }
 
 .card-body {
