--- a/Exam1/index.css
+++ b/Exam1/index.css
@@ -12,9 +12,10 @@ body,html {
     border-radius: 10px;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
 }
-.center-card {
+
+/*.center-card {
     display: flex;
     justify-content: center;
     align-items: center;
-    /*min-height: 100vh;*/
-}
+    min-height: 100vh;
+}*/
