--- a/Exam1/Moderation.css
+++ b/Exam1/Moderation.css
@@ -3,6 +3,14 @@ body, html {
     width: 100%;
 }
 
+.h-1 {
+    height: 1%;
+}
+
+.h-3 {
+    height: 3%;
+}
+
 #logoNavBar {
     height: 75px;
 }
@@ -12,7 +20,11 @@ body, html {
 }
 
 .navbarHeader {
-    margin-top: 120px;
+    margin-top: 75px;
+}
+
+.navbarHeader2 {
+    margin-top: 55px;
 }
 
 #cardEvent1 {
@@ -55,4 +67,11 @@ body, html {
 
 .btn-index {
     height: 100%;
+}
+
+.background-details {
+    background-color: #b9c3d5;
+}
+.background-details2 {
+    background-color: #082d74;
 }
